--- a/accounting.html
+++ b/accounting.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="accounting.html">accounting</a></li>
+       
+    </ul> 
 </body>
 
 <footer>
