--- a/accounting.html
+++ b/accounting.html
@@ -12,6 +12,18 @@
         <li><a href="accounting.html">accounting</a></li>
        
     </ul> 
+
+    <section id="employee">
+     <div>
+         <p id = "name"></p>
+         <select id= "option"></select>
+
+         <img src="./image/images.png" alt=" image">
+
+     </div>
+    </section>
+
+    <script src="accounting.js" ></script>
 </body>
 
 <footer>
